# fast_atom

./: .gitignore  CHANGELOG.md  README.md  mix.exs
bench/: bench.exs
lib/: fast_atom.ex
native/fastatom/: Cargo.toml
native/fastatom/src/: lib.rs
test/: fast_rss_test.exs
