[package]
authors = []
edition = "2018"
name = "fastatom"
version = "0.3.6"

[lib]
crate-type = ["dylib"]
name = "fastatom"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4"
atom_syndication = { version = "0.11", features = ["with-serde"], default-features = false }
rustler = "0.23"

serde = "1.0"
serde-transcode = "1.1"
serde_json = "1.0"
serde_rustler = { git = "https://github.com/avencera/serde_rustler.git", branch = "rustler-0.23" }
